objects/Client_Plan_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipLabel>Client Plan Relationships</relationshipLabel>
        <relationshipName>Client_Plan_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Strength__c</fullName>
        <label>Client Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Weak</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - Strong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Plan Relationships (Contact)</relationshipLabel>
        <relationshipName>Account_Plan_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reports_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Plan_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Plan Relationship</label>
    <nameField>
        <displayFormat>APR{00000}</displayFormat>
        <label>Client Plan Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plan Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>